--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ pod2htm*.tmp
 pm_to_blib
 Test-Approvals-*
 Test-Approvals-*.tar.gz
-tools/_cmtimes
-tools/_mtimes
-tools/_vtimes
+bin/_cmtimes
+bin/_mtimes
+bin/_vtimes
 .perlcritic-history
