--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@main
-
+    - name: Setup Perl environment
+      uses: shogo82148/actions-setup-perl@v1.14.2
     - name: test
       run: ./run_tests.sh
         
