--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,10 @@
 name: test
 
-on: [push, repository_dispatch]
+on: 
+  push:
+  repository_dispatch:
+  schedule:
+     - cron: '05 5 1 * *' # <https://crontab.guru/#05_5_1_*_*> - "At 05:05 on day-of-month 1"  
 
 jobs:
   test:
